convertedCode/objects/Job_Posting__c.object
<CustomObject>
    <label>Job Posting</label>
    <nameField>
        <displayFormat>JOBPOST-{0000}</displayFormat>
        <label>Job Posting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Job_Posting_Site__c</fullName>
        <label>Job Posting Site</label>
        <referenceTo>Job_Posting_Site__c</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Posting_Duration__c</fullName>
        <formula>Job_Posting_Site__r.LastModifiedDate  -  Job_Posting_Site__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posting Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Position__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
</CustomObject>